Update src/main/java/helma/main/Server.java
Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>